# opencv_convolution_example

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cpp
kernels/: basic.txt
utils/: config.cpp  config.h  convolution.cpp  convolution.h  kernel.cpp  kernel.h  runner.cpp  runner.h
